# skill

./: .gitignore  README.md  pyproject.toml  test.sh
.github/workflows/: check.yml
categories/: models.py
categories/migrations/: 0001_initial.py
comments/: models.py
comments/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py  wsgi.py
likes/: models.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py
likes/templates/likes/: like_list.html
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_post_title.py  0004_alter_post_slug.py
posts/templates/: post_confirm_delete.html  post_detail.html  post_list.html
posts/templates/posts/: post_confirm_delete.html  post_detail.html  post_form.html
templates/: base.html  home.html  login.html  signup.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_options.py
users/templates/: login.html  profile.html  signup.html
users/templates/registration/: login.html
users/templates/users/: update.html
