[tool.poetry]
name = "skill-blog"
version = "0.1.0"
description = ""
authors = ["vivid <jeajun18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
django-markdownx = "^4.0.7"
pillow = "^11.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
coverage = "^7.6.7"
django-crispy-forms = "^2.3"
crispy-bootstrap4 = "^2024.10"
django-stubs = "^5.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
django-stubs = "^5.1.1"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
